@@ -3,6 +3,8 @@
 	- dnssec-trigger-control hotspot_signon, forces insecure mode for
 	  a sign-on.  The reprobe command can be used to stop forced_insecure.
 	- added probe tcp80 and tcp443 as last resort.
+	- retry for insecure and disconnect cases with exponential backoff,
+	  start 10 seconds, max 24h.
 
 21 Sep 2011: Wouter
 	- ignore UDP without QR flag: some DNS caches send echoes of the query
